--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,7 @@
             android:text="1"
             android:textSize="30sp"
             android:background="#ccc"
-            android:onClick="passToTextView"
-            />
+            android:onClick="passToTextView" />
 
         <Button
             android:id="@+id/button_2"
